--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -39,6 +39,7 @@
 <br clear="both" />
 <label>Crank Model:</label>
       <select name="crank_model" id="crank_model">
+        <option value="">Please Select</option>
      </select>
      <br clear="both" />
      <div>
