--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -43,7 +43,7 @@
      </select>
      <br clear="both" />
      <div>
-      <a href="#">My crank manufacturer and model aren't listed here, contact us</a>
+      <a href="#">My crank manufacturer and model aren't listed here</a>
      </div>
 <script type="javascript">
 jQuery(document).ready(function($){
