--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -39,11 +39,11 @@
 <br clear="both" />
 <label>Crank Model:</label>
       <select name="crank_model" id="crank_model">
-        <option value="">Please Select</option>
+        <option value="">Please select</option>
      </select>
      <br clear="both" />
      <div>
-      <a href="#">My crank manufacturer and model aren't listed here</a>
+      <a href="#" id="crank_not_listed">My crank manufacturer and model aren't listed here</a>
      </div>
 </div>
 <p>&nbsp;</p>
