--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -194,8 +194,8 @@ $.fancybox.close();
   });
 
 
-$('body').on('change','#crank_manufacturer',function(e){
-var sel_mfg = $(this).val();
+$('#crank_manufacturer').change(function(e){
+var sel_mfg = $(this).find('option:selected').val();
 console.log(sel_mfg);
 switch(sel_mfg){
   default:
@@ -226,7 +226,6 @@ switch(sel_mfg){
 });
 
 $('#crank_not_listed').click(function(e){
-
 
 });
 
