--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -145,7 +145,8 @@ $( document ).ready(function() {
   <div id="addtocart-popup">
   <div class="cart-popup-content">
   <div>Dear cyclist,<br />
-  Watteam has leveled the playing field with the first pro-level power meter that won't break the bank. We were able to achieve that using smart built-in technology that allows the biker to entirely self-install and calibrate the PowerBeat device. By pioneering this new era with us, we ask that early adopters have some basic technical skills:</div>
+    <br />
+  Watteam has leveled the playing field with the first pro-level power meter that won't break the bank. We were able to achieve that using smart built-in technology that allows the biker to entirely self-install and calibrate the PowerBeat device. By pioneering this new era with us, we ask that early adopters have some basic technical skills:<br /><br /></div>
   <ul>
     <li>Removing the pedals</li>
     <li>Gluing the sensors</li>
