--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -227,11 +227,11 @@ switch(sel_mfg){
   break;
 }
 });
-$('#crank_model').click(function(e)){
+$('#crank_model').click(function(e){
   if($(this).val()!=""){
     $('.add-to-cart').show();
   }
-}
+});
 
 $('#crank_not_listed').click(function(e){
 
