--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -4,10 +4,10 @@
             	
                 <div id="bottom-socials">
                  	<ul class="social-icon">
-                     	<li><a id="facebook" href="https://www.facebook.com/WatteamPowerBeat" target="_blank">   <%= image_tag("f_facebook.png", :alt => "facebook") %></a></li>
-                        <li><a id="twitter" href="https://twitter.com/WatteamOn" target="_blank"> <%= image_tag("f_twitter.png", :alt => "twitter") %></a></li>
-                        <li><a id="linkdin" href="https://www.linkedin.com/company/5283843?trk=tyah&amp;trkInfo=tarId%3A1406659274171%2Ctas%3Awatteam%2Cidx%3A1-1-1" target="_blank"><%= image_tag("f_linkedin.png", :alt => "linkedin") %></a></li>
-                        <li><a id="youtube" href="https://www.youtube.com/user/WatteamPowerBeat/feed" target="_blank"><%= image_tag("f_youtube.png", :alt => "youtube") %></a></li>
+                     	<li><a id="facebook" href="https://www.facebook.com/WatteamPowerBeat" target="_blank">   <%= image_tag("f_facebook.png", :alt => "facebook", :height=>'32', :width=>'32') %></a></li>
+                        <li><a id="twitter" href="https://twitter.com/WatteamOn" target="_blank"> <%= image_tag("f_twitter.png", :alt => "twitter", :height=>'32', :width=>'32') %></a></li>
+                        <li><a id="linkdin" href="https://www.linkedin.com/company/5283843?trk=tyah&amp;trkInfo=tarId%3A1406659274171%2Ctas%3Awatteam%2Cidx%3A1-1-1" target="_blank"><%= image_tag("f_linkedin.png", :alt => "linkedin", :height=>'32', :width=>'32') %></a></li>
+                        <li><a id="youtube" href="https://www.youtube.com/user/WatteamPowerBeat/feed" target="_blank"><%= image_tag("f_youtube.png", :alt => "youtube", :height=>'32', :width=>'32') %></a></li>
                     </ul>
                 </div>
             	            </div>
@@ -93,16 +93,16 @@ Irvine CA, 92604 USA.<br>
       <h5>SOCIALIZE WITH US</h5>
 	  <ul class="bottom-social">
 	  <li>
-       <a href="https://www.facebook.com/WatteamPowerBeat" target="_blank"><%= image_tag 'FACEBOOK.png' %></a>
+       <a href="https://www.facebook.com/WatteamPowerBeat" target="_blank"><%= image_tag 'FACEBOOK.png', :height=>'56', :width=>'56'  %></a>
 	  </li>
 	  <li>
-      <a href="https://twitter.com/WatteamOn" target="_blank"><%= image_tag 'TW.png' %></a>
+      <a href="https://twitter.com/WatteamOn" target="_blank"><%= image_tag 'TW.png', :height=>'56', :width=>'56' %></a>
 	  </li>
 	  <li>
-      <a href="https://www.linkedin.com/company/watteam-ltd-?trk=tyah&trkInfo=tarId%3A1406659274171%2Ctas%3Awatteam%2Cidx%3A1-1-1" target="_blank"><%= image_tag 'LINKED.png' %></a>
+      <a href="https://www.linkedin.com/company/watteam-ltd-?trk=tyah&trkInfo=tarId%3A1406659274171%2Ctas%3Awatteam%2Cidx%3A1-1-1" target="_blank"><%= image_tag 'LINKED.png', :height=>'56', :width=>'56' %></a>
 	  </li>
 	  <li>
-     <a href="https://www.youtube.com/user/WatteamPowerBeat/feed" target="_blank"> <%= image_tag 'YU.png' %></a>
+     <a href="https://www.youtube.com/user/WatteamPowerBeat/feed" target="_blank"> <%= image_tag 'YU.png', :height=>'56', :width=>'56' %></a>
 	  </li>
 	  </ul>
     </div>
