--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -12,9 +12,9 @@ $('#mobile-menu-open').click(function() {
 <header id="header" class="row" data-hook>
 <div class="header-logo-main">
 	<div class="header-container">
-  <figure id="logo" class="columns six" data-hook><a href="http://watteam.com"><%= image_tag 'spree_50.png' %></a><span class="logo-sub-t">&nbsp;&nbsp; Innovation with a spin  </span><!--<span class="top-phone-no"><%= image_tag 'phone-contact.png' %><p>1-877-213-8399</p> </span>--></figure>
+  <figure id="logo" class="columns six" data-hook><a href="http://watteam.com"><%= image_tag 'spree_50.png', :height=>'26', :width=>'110' %></a><span class="logo-sub-t">&nbsp;&nbsp; Innovation with a spin  </span><!--<span class="top-phone-no"><%= image_tag 'phone-contact.png' %><p>1-877-213-8399</p> </span>--></figure>
   <div class="header-cart">
-	<a href="/cart" >CART <img src="<%= asset_path('cart.png') %>" alt="cart" height="23" valign="middle" /></a>
+	<a href="/cart" >CART <img src="<%= asset_path('cart.png') %>" alt="cart" height="23" width="27" valign="middle" /></a>
   </div>
   </div>
  </div>
