--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -155,7 +155,7 @@ $( document ).ready(function() {
     <li>Installing the comp units</li>
     <li>Calibrating the device</li>
   </ul>
-  <div>The installation process takes about 30 minutes and is done using the app, which has embedded videos that clearly explain every step.  You may refer to our <a href="http://watteam.com/support/">Support page</a> to view the installation videos.</div>
+  <div>The installation process takes about 30 minutes and is done using the app, which has embedded videos that clearly explain every step.  You may refer to our <a href="http://watteam.com/support/" class="support">Support page</a> to view the installation videos.</div>
   <div>Before purchasing POWERBEAT, please make sure that you possess the required technical skills.</div>
   </div>
   <div class="cart-popup-btn">
