--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -234,7 +234,7 @@ switch(sel_mfg){
  '<option value="3D" class="Rotor">Rotor</option>');
   break;
 }
-  $('#crank_model').append('<option value="CRANK_NOT_LISTED">Crank_Not_Listed</option>');
+  $('#crank_model').append('<option value="CRANK_NOT_LISTED">Crank model not listed</option>');
 });
 $('#crank_model').click(function(e){
   if($(this).val()!="" && $(this).val()!="CRANK_NOT_LISTED"){
