--- a/app/views/spree/checkout/_confirm.html.erb
+++ b/app/views/spree/checkout/_confirm.html.erb
@@ -1,6 +1,6 @@
 <fieldset id="order_details" data-hook>
   <div class="clear"></div>
-  <legend align="center"><%= Spree.t(:confirm) %></legend>
+  <legend align="center"><%= Spree.t("Review") %></legend>
   <%= render :partial => 'spree/shared/order_details', :locals => { :order => @order } %>
 </fieldset>
 
