--- a/app/views/spree/checkout/registration.html.erb
+++ b/app/views/spree/checkout/registration.html.erb
@@ -16,7 +16,7 @@
       <% end %>
     </div>
   <% end %>
-  <div id="account" class="col-md-6">
+  <div id="account" class="col-md-6 dnone">
     <%= render template: 'spree/user_sessions/new' %>
   </div>
 </div>
