--- a/app/views/spree/checkout/_delivery.html.erb
+++ b/app/views/spree/checkout/_delivery.html.erb
@@ -6,7 +6,10 @@
 
         <div class="shipment">
           <h3 class="stock-location" data-hook="stock-location">
-            <%= Spree.t(:package_from) %>
+            <% if false %>
+            <%= Spree.t(:package_from)  %>
+           <% end %>
+             %>
             <strong class="stock-location-name" data-hook="stock-location-name"><%= ship_form.object.stock_location.name %></strong>
           </h3>
 
