--- a/app/views/spree/order_mailer/confirm_email.html.erb
+++ b/app/views/spree/order_mailer/confirm_email.html.erb
@@ -11,7 +11,7 @@
       </p>
       <p>
       <%
-      if fale
+      if false
          Spree.t('order_mailer.confirm_email.instructions') 
        end
       %>
