--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -30,7 +30,7 @@
 
     <div class="crank_selector">
       <p class="crank_description">POWERBEAT is currently compatible with hollow aluminum cranks only. The below list includes all the crank manufacturers and models that are tested and supported at this stage:</p>
-      <p class="crank_description">Please choose your crank manufacturer and model below to proceed</p>
+      <p class="crank_description"><strong>Please choose your crank manufacturer and model below to proceed</strong></p>
   <label>Crank Manufacturer:</label>
       <select name="crank_manufacturer" id="crank_manufacturer">
         <option value="">Please select</option>
