--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -74,7 +74,7 @@ $(document).ready(function(){
 <div class="tab_data">
 <div id="tab-1" class="tab-content current-tab">
 <p><img src="<%= asset_path ('mid_banner.jpg') %>" alt="watteam banner" width="100%" /></p>
-<p><strong>With POWERBEAT, you can have it all.</strong>  The self-contained kit puts an end to factory installation and calibration. It's packed with two patent-pending mechanical sensors and intelligent processing units – that when attached to the cranks<sup>1</sup> deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for amateur and unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with any BLE head unit<sup>2</sup>, even a BTE smartphone. <br />
+<p><strong>With POWERBEAT, you can have it all.</strong>  The self-contained kit puts an end to factory installation and calibration. It's packed with two patent-pending mechanical sensors and intelligent processing units – that when attached to the cranks<sup>1</sup> deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with ANT+ head units, as well as with Bluetooth Smart enabled smartphones. <br />
 At last, a professional-grade power meter that anyone can afford!<br />
 Notes:<br />
 1)  POWERBEAT supports hollow aluminum cranks only.  Future versions will support all additional cranks, including Carbon.<br />
@@ -120,7 +120,7 @@ POWERBEAT sports the industry's first ecological battery. It comes equipped with
     <td>Waterproof:</td><td>IP64 certified</td>
   </tr>
   <tr>
-    <td>Compatible cranks:</td><td>Hollow aluminum (Click here for full list)</td>
+    <td>Compatible cranks:</td><td>Hollow aluminum <a href="#" >(Click here for full list)</a></td>
   </tr>
   <tr>
     <td>Mobile apps:</td><td>iOS and Android</td>
@@ -149,7 +149,7 @@ POWERBEAT sports the industry's first ecological battery. It comes equipped with
 1 User's Manual<br />
 <br />
 Box size:   27*22.5*7 cm<br />
-Box weight: 700 grams<br />
+Box weight: 700 grams (24.7 ounces)<br />
 </p>
 </div>
 </div>
