--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,4 +1,6 @@
-<% redirect_to '/products/pbprometer1' %>
+<script>
+window.location.href = '/products/pbprometer1';
+</script>
 <div class="home">
 <% content_for :subheader do %>
   <%= render 'slider' %>
