--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -98,7 +98,7 @@ $( document ).ready(function() {
         'autoDimensions': true,
         'modal': true
     });
-
+  $('.fancybox-type-inline').css('z-index','10000');
 });
 </script>
           <% end %>
