--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -46,7 +46,7 @@ $('#mobile-menu-open').click(function() {
 <div class="claer"></div>
 </ul>
 <div class="claer"></div>
-<a href="#" id="mobile-menu-open">Menu</a>
+<a href="#" id="mobile-menu-open"></a>
 	<ul class="togle_menu_mobile" style="display:none;">
 		<li class="menu_mo">
 			<a href="#" class="mobile-product">PRODUCT</a>
