--- a/app/assets/stylesheets/spree/fancy/shared/_media.scss
+++ b/app/assets/stylesheets/spree/fancy/shared/_media.scss
@@ -348,13 +348,14 @@
     }
 
     .progress-steps {
-      position: absolute;
-      top: 20px;
+      position: relative;
+      top: 30px;
       margin-left: 0;
+      list-style:none;
 
       li {
         &, &.current, &.current-first, &.current-last {
-          padding: 0 5px !important;
+          padding: 6px !important;
           margin-right: 0px;
           margin-bottom: 0;
           text-transform: none;
