--- a/app/assets/stylesheets/spree/fancy/shared/_media.scss
+++ b/app/assets/stylesheets/spree/fancy/shared/_media.scss
@@ -355,7 +355,7 @@
 
       li {
         &, &.current, &.current-first, &.current-last {
-          padding: 6px !important;
+          padding: 0px !important;
           margin-right: 0px;
           margin-bottom: 0;
           text-transform: none;
@@ -366,8 +366,7 @@
         }
 
         span {
-          padding: 0;
-          padding-top: 10px;
+          padding: 10px 10px 20px;
         }
         &.current, &.current-first, &.current-last {
           @include box-shadow(none);
