--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -36,8 +36,8 @@
     <p>  WATTEAM Headquarters, 17780<br>
 Fitch Avenue, Suite 111,<br>
 Irvine CA, 92604 USA.<br>
-<a href="mailto:/info@watteam.com" onclick="__gaTracker('send', 'event', 'mailto', '/info@watteam.com');">info@watteam.com</a><br>
-+972-4-658-1516<br></p>     
+<a href="mailto:support@watteam.com" onclick="__gaTracker('send', 'event', 'mailto', '/support@watteam.com');">support@watteam.com</a><br>
++1-949-656-8540<br></p>     
     </div>
     
     <div class="three columns f_mid">
