--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -242,7 +242,7 @@ switch(sel_mfg){
   break;
   case 'Rotor':
   $('#crank_model').html('<option value="">Please select</option>' +
- '<option value="3D" class="Rotor">Rotor</option>');
+ '<option value="3D" class="Rotor">3D</option>');
   break;
 }
   $('#crank_model').append('<option value="CRANK_NOT_LISTED">Crank model not listed</option>');
