--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -230,6 +230,7 @@ switch(sel_mfg){
  '<option value="Dura Ace FC 9000" class="Shimano">Dura Ace FC 9000</option>' +
  '<option value="Ultegra FC 6600" class="Shimano">Ultegra FC 6600</option>' +
  '<option value="Ultegra FC 6700" class="Shimano">Ultegra FC 6700</option>' +
+ '<option value="Ultegra FC 6750" class="Shimano">Ultegra FC 6750</option>' +
  '<option value="Ultegra FC 6800" class="Shimano">Ultegra FC 6800</option>' +
  '<option value="105 FC 5600" class="Shimano">105 FC 5600</option>' +
  '<option value="105 FC 5800" class="Shimano">105 FC 5800</option>' +
