--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -172,6 +172,7 @@ Dura Ace FC 7900<br />
 Dura Ace FC 9000<br />
 Ultegra FC 6600<br />
 Ultegra FC 6700<br />
+Ultegra FC 6750<br />
 Ultegra FC 6800<br />
 105 FC 5600<br />
 105 FC 5700<br />
