--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -115,7 +115,7 @@ Irvine CA, 92604 USA.<br>
    <div class="container">
                 <ul class="clearfix">
                     <li>© 2014 WATTEAM - All rights reserved</li>
-                    <li>Legal | Terms and Conditions</li>
+                    <li><a href="http://watteam.com/privacy-policy/">Legal</a> | <a href="http://watteam.com/terms-of-use/">Terms and Conditions</a></li>
                 </ul>
             </div>
 			</div>
