--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -168,6 +168,7 @@ Box weight: 700 grams (24.7 ounces)<br />
 <p>
 <strong>Shimano:</strong><br />
 Dura Ace FC 7700<br />
+Dura Ace FC 7800<br />
 Dura Ace FC 7900<br />
 Dura Ace FC 9000<br />
 Ultegra FC 6600<br />
@@ -176,6 +177,7 @@ Ultegra FC 6750<br />
 Ultegra FC 6800<br />
 105 FC 5600<br />
 105 FC 5700<br />
+105 FC 5750<br />
 105 FC 5800<br />
 FC 6650<br />
 FC R700<br />
@@ -185,6 +187,7 @@ Energy<br />
 <br />
 <strong>Rotor:</strong><br />
 3D<br />
+3D+<br />
 </p>
 </div>
 </div>
