--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -41,7 +41,7 @@ $('#mobile-menu-open').click(function() {
 	<li><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
 </ul>
 </li>
-<li><a href="https://watteam.herokuapp.com/products/pbprometer1">Pre-Order</a></li>
+<li><a href="https://shop.watteam.com/products/pbprometer1">Pre-Order</a></li>
 <li><a href="http://watteam.com/contact/">Contact</a></li>
 <div class="claer"></div>
 </ul>
@@ -74,7 +74,7 @@ $('#mobile-menu-open').click(function() {
 				</ul>
 				<div class="claer"></div>
 		</li>
-		<li class="menu_mo"><a href="https://watteam.herokuapp.com/products/pbprometer1">Pre-Order</a></li>
+		<li class="menu_mo"><a href="https://shop.watteam.com/products/pbprometer1">Pre-Order</a></li>
 		<li class="menu_mo"><a href="http://watteam.com/contact/">Contact</a></li>
 
 		<div class="claer"></div>
