--- a/app/views/spree/order_mailer/confirm_email.html.erb
+++ b/app/views/spree/order_mailer/confirm_email.html.erb
@@ -1,4 +1,4 @@
-<table>
+<table width="600">
 <tr>
   <td>
     <p class="lede">
@@ -23,8 +23,8 @@
     <table>
       <% @order.line_items.each do |item| %>
         <tr>
-          <td width="20%"><%= item.variant.sku %></td>
-          <td width="25%">
+          <td width="15%"><%= item.variant.sku %></td>
+          <td width="35%">
             <%= raw(item.variant.product.name) %><br />
             <%= raw(item.variant.options_text) %>
           </td>
