--- a/app/views/spree/order_mailer/confirm_email.html.erb
+++ b/app/views/spree/order_mailer/confirm_email.html.erb
@@ -1,6 +1,6 @@
 <table width="600">
 <tr>
-  <td>
+  <td style="word-wrap:normal;">
     <p class="lede">
       Dear Cyclist,
       <% 
@@ -44,9 +44,9 @@
         <% if @order.all_adjustments.promotion.eligible.exists? %>
           <% @order.all_adjustments.promotion.eligible.group_by(&:label).each do |label, adjustments| %>
             <tr>
-              <td></td>
-              <td><%= Spree.t(:promotion) %> <%= label %>:</td>
-              <td><%= Spree::Money.new(adjustments.sum(&:amount), currency: @order.currency) %></td>
+              <td style="word-wrap:normal;"></td>
+              <td style="word-wrap:normal;"><%= Spree.t(:promotion) %> <%= label %>:</td>
+              <td style="word-wrap:normal;"><%= Spree::Money.new(adjustments.sum(&:amount), currency: @order.currency) %></td>
             </tr>
           <% end %>
         <% end %>
@@ -54,16 +54,16 @@
       <% @order.shipments.group_by { |s| s.selected_shipping_rate.try(:name) }.each do |name, shipments| %>
         <tr>
           <td></td>
-          <td><%= Spree.t(:shipping) %> <%= name %>:</td>
-          <td><%= Spree::Money.new(shipments.sum(&:discounted_cost), currency: @order.currency) %></td>
+          <td style="word-wrap:normal;"><%= Spree.t(:shipping) %> <%= name %>:</td>
+          <td style="word-wrap:normal;"><%= Spree::Money.new(shipments.sum(&:discounted_cost), currency: @order.currency) %></td>
         </tr>
       <% end %>
       <% if @order.all_adjustments.eligible.tax.exists? %>
         <% @order.all_adjustments.eligible.tax.group_by(&:label).each do |label, adjustments| %>
           <tr>
             <td></td>
-            <td><%= Spree.t(:tax) %> <%= label %>:</td>
-            <td><%= Spree::Money.new(adjustments.sum(&:amount), currency: @order.currency) %></td>
+            <td style="word-wrap:normal;"><%= Spree.t(:tax) %> <%= label %>:</td>
+            <td style="word-wrap:normal;"><%= Spree::Money.new(adjustments.sum(&:amount), currency: @order.currency) %></td>
           </tr>
         <% end %>
       <% end %>
@@ -71,21 +71,21 @@
         <% next if (adjustment.source_type == 'Spree::TaxRate') and (adjustment.amount == 0) %>
         <tr>
           <td></td>
-          <td><%= adjustment.label %>:</td>
-          <td><%= adjustment.display_amount %></td>
+          <td style="word-wrap:normal;"><%= adjustment.label %>:</td>
+          <td style="word-wrap:normal;"><%= adjustment.display_amount %></td>
         </tr>
       <% end %>
       <tr>
         <td></td>
-        <td>
+        <td style="word-wrap:normal;">
           <%= Spree.t('order_mailer.confirm_email.total') %>
         </td>
-        <td>
+        <td style="word-wrap:normal;">
           <%= @order.display_total %>
         </td>
       </tr>
     </table>
-    <p>
+    <p style="word-wrap:normal;">
       <%
       if false
        Spree.t('order_mailer.confirm_email.thanks') 
@@ -98,6 +98,6 @@
       Watteam
     </h2>
   </td>
-  <td class="expander"></td>
+  <td class="expander" style="word-wrap:normal;"></td>
 </tr>
 </table>
