--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -54,10 +54,10 @@ Irvine CA, 92604 USA.<br>
 
 <div class="mc-field-group">
 
-	<label for="mce-FNAME">Name:
-
-</label>
-       	<input type="text" value="" name="first_name" class="required" id="mce-FNAME" placeholder="">
+	<label for="mce-FNAME">First Name:</label>
+       	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="">
+  <label for="mce-LNAME">Last Name:</label>
+        <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" placeholder="">
 		
 		<label for="mce-EMAIL">Email:
 
