--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -75,7 +75,7 @@
   <div id="out-of-stock-popup">
   <div class="cart-popup-content">
   <div>
-  We're sorry but the first batch of POWRBEATs has sold out more quickly than expected. The next batch will be shipped by Spring 2016.<br />  
+  We're sorry but the first batch of POWRBEATs has sold out more quickly than expected. The next batch will be shipped by March 2016.<br />  
   You may make your order now to secure a unit, or simply sign up to receive updates.
   </div>
   <div class="cart-popup-btn">
