--- a/app/views/spree/order_mailer/confirm_email.html.erb
+++ b/app/views/spree/order_mailer/confirm_email.html.erb
@@ -91,7 +91,7 @@
        Spree.t('order_mailer.confirm_email.thanks') 
       end
        %>
-       POWERBEAT will be shipped to your home by the <strong>end of 2015</strong>.<br />
+       POWERBEAT will be shipped to your home by the <strong>March of 2016</strong>.<br />
        We're excited to have you on board and thank you for your business. 
     </p>
     <h2>
