--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -13,7 +13,7 @@
 	</div>
     <div class="container">
 
-      <div id="wrapper" class="row" data-hook>
+      <div id="wrapper1" class="row1" data-hook>
 
         <%= breadcrumbs(@taxon) %>
 
