--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer id="footer" class="sixteen columns" data-hook>
- <div class="row">
+ <div class="container">
     <div class=" col-xs-12 col-md-12 col-sm-12">
     <div class="footer-wrper">
     <div class="col-md-6 col-sm-6">
@@ -37,7 +37,7 @@
    <div class="clear"> </div>
    
    
-   <div class="col-md-12 col-sm-12">
+   <div class="container">
    <div class="footer-navi-bar">
    <ul>
    <li><a href="#">Benefits </a>|</li>
